source code for former scangen has been added scipts for alignments downloads have been updated
Committer: Herve Rouault <rouault@lps.ens.fr>

On branch master
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

 new file:   AUTHORS
 new file:   COPYING
 modified:   ChangeLog
 new file:   INSTALL
 new file:   Makefile.am
 new file:   Makefile.in
 new file:   NEWS
 modified:   README
 new file:   TODO
 new file:   aclocal.m4
 new file:   autogen.sh
 new file:   autom4te.cache/output.0
 new file:   autom4te.cache/output.1
 new file:   autom4te.cache/output.2
 new file:   autom4te.cache/output.3
 new file:   autom4te.cache/output.4
 new file:   autom4te.cache/output.5
 new file:   autom4te.cache/output.6
 new file:   autom4te.cache/output.7
 new file:   autom4te.cache/requests
 new file:   autom4te.cache/traces.0
 new file:   autom4te.cache/traces.1
 new file:   autom4te.cache/traces.2
 new file:   autom4te.cache/traces.3
 new file:   autom4te.cache/traces.4
 new file:   autom4te.cache/traces.5
 new file:   autom4te.cache/traces.6
 new file:   autom4te.cache/traces.7
 new file:   autoscan.log
 new file:   config.h.in
 new file:   config.h.in~
 new file:   configure
 new file:   configure.ac
 new file:   configure.scan
 new file:   data/Makefile.am
 copied:     src/alignments/Makefile.in -> data/Makefile.in
 new file:   data/mapping.dat
 new file:   depcomp
 new file:   install-sh
 new file:   m4/ax_blas.m4
 new file:   missing
 new file:   py-compile
 new file:   scripts/Makefile.am
 copied:     src/alignments/Makefile.in -> scripts/Makefile.in
 new file:   scripts/python/Makefile.am
 new file:   scripts/python/Makefile.in
 new file:   scripts/python/mapping.py.in
 new file:   scripts/python/maskalignedgenomes.py.in
 new file:   scripts/sh/Makefile.am
 copied:     src/alignments/Makefile.in -> scripts/sh/Makefile.in
 new file:   scripts/sh/generate-droso-alignlist.sh.in
 new file:   scripts/sh/generate-eutherian-alignlist.sh
 new file:   src/.scange

--- a/src/alignments/Makefile.am
+++ b/src/alignments/Makefile.am
@@ -1,7 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-bin_PROGRAMS = align
-
-align_SOURCES = align.cpp align.hpp
-align_CPPFLAGS = -O2
-
+## bin_PROGRAMS = align
+## 
+## align_SOURCES = align.cpp align.hpp
+## 
