--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-
-
+*~
 Makefile.in
 config.h.in
+config.h.in~
+configure
+depcomp
+build
+autoscan.log
+depcomp
+install-sh
+missing
+py-compile
+aclocal.m4
+autom4te.cache
+*cmdline.[ch]
+depcomp
