Moved maskalignedgenomes.py.in to getalign-{drosomeutherian}.py.in Changes makefile accordingly Changed flybase repository from current to FEB2011_06 (better if hardcoded) removed tar "checkpoints" option (NA on mac)
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   scripts/python/Makefile.am
	new file:   scripts/python/align.cpp
	new file:   scripts/python/get-epo-align.sh
	new file:   scripts/python/getalign-droso.py.in
	new file:   scripts/python/getalign-eutherian.py.in
	modified:   scripts/sh/Makefile.am
	new file:   scripts/sh/generate-eutherian-alignlist.sh.in

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    scripts/python/maskalignedgenomes.py.in
	deleted:    scripts/sh/generate-eutherian-alignlist.sh
	deleted:    src/cmdline.c
	deleted:    src/cmdline.h
	deleted:    src/scangen.cpp
	deleted:    src/scangen.ggo

--- a/scripts/python/Makefile.am
+++ b/scripts/python/Makefile.am
@@ -1,12 +1,17 @@
 
-
-python_PYTHON = maskalignedgenomes.py mapping.py
+python_PYTHON = getalign-droso.py getalign-eutherian.py mapping.py
+CLEANFILES = $(python_PYTHON)
+EXTRA_DIST = getalign-droso.py.in getalign-eutherian.py.in mapping.py.in
 
 do_subst = sed -e 's,[@]pythondir[@],$(pythondir),g' -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'
 
-maskalignedgenomes.py: maskalignedgenomes.py.in
-	$(do_subst) < $(srcdir)/maskalignedgenomes.py.in > maskalignedgenomes.py
-	chmod +x maskalignedgenomes.py
+getalign-droso.py: getalign-droso.py.in
+	$(do_subst) < $(srcdir)/getalign-droso.py.in > getalign-droso.py
+	chmod +x getalign-droso.py
+
+getalign-eutherian.py: getalign-eutherian.py.in
+	$(do_subst) < $(srcdir)/getalign-eutherian.py.in > getalign-eutherian.py
+	chmod +x getalign-eutherian.py
 
 do_substmap = sed -e 's,[@]pkgdatadir[@],$(pkgdatadir),g' 
 
