several minor updates in following files
 On branch master
 Your branch is behind 'origin/master' by 2 commits, and can be fast-forwarded.

 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   doc/imogene.texi
	modified:   src/Makefile.am
	new file:   src/imogene.cpp

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    src/alignments/Makefile.am
	deleted:    src/alignments/align.cpp
	deleted:    src/alignments/align.hpp
	deleted:    src/imogene-genmot.cpp

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,12 +3,12 @@
 noinst_LIBRARIES = libdistinfo.a
 libdistinfo_a_SOURCES = distinfo.cpp distinfo.hpp
 
-bin_PROGRAMS = imogene_genmot ##distinfo
+bin_PROGRAMS = imogene ##distinfo
 ##bin_PROGRAMS = scangen distinfo 
 ## 
-imogene_genmot_SOURCES = imogene-genmot.hpp imogene-genmot.cpp sequence.cpp sequence.hpp motif.cpp motif.hpp tree.cpp tree.hpp random.cpp random.hpp vectortypes.cpp const.cpp const.hpp vectortypes.hpp imogene-genmot_cmdline.c imogene-genmot_cmdline.h
-imogene_genmot_CPPFLAGS = -DDATA_PATH=${pkgdatadir}
-imogene_genmot_LDADD = libdistinfo.a
+imogene_SOURCES = imogene.hpp imogene.cpp sequence.cpp sequence.hpp motif.cpp motif.hpp tree.cpp tree.hpp random.cpp random.hpp vectortypes.cpp const.cpp const.hpp vectortypes.hpp imogene-genmot_cmdline.c imogene-genmot_cmdline.h
+imogene_CPPFLAGS = -DDATA_PATH=${pkgdatadir}
+imogene_LDADD = libdistinfo.a
 
 ## distinfo_SOURCES =  distinfo.cpp distinfo.hpp motif.cpp motif.hpp sequence.cpp sequence.hpp tree.cpp tree.hpp const.cpp const.hpp vectortypes.cpp vectortypes.hpp
 
