Modified getalign-eutherian.py.in so that it tries to import Cython, uses it if possible, else uses python for emf2fasta conversion.
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   .gitignore
	modified:   doc/imogene.texi
	modified:   scripts/python/Makefile.am
	modified:   scripts/python/cython/test.py
	new file:   scripts/python/emf2fasta.pyx.in
	modified:   scripts/python/getalign-eutherian.py.in

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    scripts/python/cython/align
	deleted:    scripts/python/cython/align.cpp
	deleted:    scripts/python/cython/convert.c
	deleted:    scripts/python/cython/convert.pyx
	deleted:    scripts/python/cython/convert.so
	deleted:    scripts/python/cython/setup.py
	deleted:    scripts/python/cython/test

--- a/scripts/python/Makefile.am
+++ b/scripts/python/Makefile.am
@@ -1,7 +1,7 @@
 
-python_PYTHON = getalign-droso.py getalign-eutherian.py mapping.py
+python_PYTHON = getalign-droso.py getalign-eutherian.py mapping.py emf2fasta.pyx
 CLEANFILES = $(python_PYTHON)
-EXTRA_DIST = getalign-droso.py.in getalign-eutherian.py.in mapping.py.in
+EXTRA_DIST = getalign-droso.py.in getalign-eutherian.py.in mapping.py.in emf2fasta.pyx.in
 
 do_subst = sed -e 's,[@]pythondir[@],$(pythondir),g' -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'
 
@@ -12,6 +12,9 @@ getalign-droso.py: getalign-droso.py.in
 getalign-eutherian.py: getalign-eutherian.py.in
 	$(do_subst) < $(srcdir)/getalign-eutherian.py.in > getalign-eutherian.py
 	chmod +x getalign-eutherian.py
+
+emf2fasta.pyx: emf2fasta.pyx.in
+	$(do_subst) < $(srcdir)/emf2fasta.pyx.in > emf2fasta.pyx
 
 do_substmap = sed -e 's,[@]pkgdatadir[@],$(pkgdatadir),g' 
 
