Nice display for conversion, with progress bar
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   scripts/python/emf2fasta.pyx.in
	modified:   scripts/python/getalign-eutherian.py.in

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    scripts/python/align.cpp
	deleted:    scripts/python/cython/align
	deleted:    scripts/python/cython/align.cpp
	deleted:    scripts/python/cython/convert.c
	deleted:    scripts/python/cython/convert.pyx
	deleted:    scripts/python/cython/convert.so
	deleted:    scripts/python/cython/setup.py
	deleted:    scripts/python/cython/test
	deleted:    scripts/python/cython/test.py

--- a/scripts/python/getalign-eutherian.py.in
+++ b/scripts/python/getalign-eutherian.py.in
@@ -27,11 +27,12 @@ print
 
 mkdir('alignments')
 os.chdir("alignments")
-os.system('wget -c -nd ftp://ftp.ensembl.org/pub/release-63/emf/ensembl-compara/epo_12_eutherian/*')
+#os.system('wget -c -nd ftp://ftp.ensembl.org/pub/release-63/emf/ensembl-compara/epo_12_eutherian/*')
 
 print "[",datetime.datetime.now(),"]  Extracting alignment files..."
 print
 
+#os.system('gunzip -v *.gz')
 
 print "[",datetime.datetime.now(),"]  Converting EMF files to fasta..."
 print
