--- a/scripts/python/getalign-eutherian.py.in
+++ b/scripts/python/getalign-eutherian.py.in
@@ -45,49 +45,42 @@ try:
    pyximport.install()
    import emf2fasta
 except:
-   print "[",datetime.datetime.now(),"]  Using Cython for emf2fasta conversion..."
+   print "[",datetime.datetime.now(),"]  Using Python for emf2fasta conversion..."
    print
    execfile("emf2fasta.pyx")
 
-sys.exit(1)
+#os.remove("*.emf")
 
 
-   
+
+
+
 os.chdir('..')
 
-print 'ok'
-sys.exit()
-
-
-print "[",datetime.datetime.now(),"]  Getting Flybase annotation files..."
+print "[",datetime.datetime.now(),"]  Getting ENSEMBL GTF annotation file..."
 print 
+
 mkdir("annot")
 os.chdir("annot")
 
-os.system('wget -c "ftp://ftp.flybase.net/releases/current/dmel_r5.38/gff/dmel-2L-r5.38.gff.gz"')
-os.system('wget -c "ftp://ftp.flybase.net/releases/current/dmel_r5.38/gff/dmel-2R-r5.38.gff.gz"')
-os.system('wget -c "ftp://ftp.flybase.net/releases/current/dmel_r5.38/gff/dmel-3L-r5.38.gff.gz"')
-os.system('wget -c "ftp://ftp.flybase.net/releases/current/dmel_r5.38/gff/dmel-3R-r5.38.gff.gz"')
-os.system('wget -c "ftp://ftp.flybase.net/releases/current/dmel_r5.38/gff/dmel-4-r5.38.gff.gz"')
-os.system('wget -c "ftp://ftp.flybase.net/releases/current/dmel_r5.38/gff/dmel-X-r5.38.gff.gz"')
+os.system('wget -c "ftp://ftp.ensembl.org/pub/release-63/gtf/mus_musculus/Mus_musculus.NCBIM37.63.gtf.gz"')
 
 print "[",datetime.datetime.now(),"]  Extracting coordinate files..."
 print
 
-os.system('gunzip *.gff.gz')
+os.system('gunzip *.gtf.gz')
 
 print "[",datetime.datetime.now(),"]  Relevant coordinate extraction."
 print 
 
-os.system('awk \'/repeatmasker_dummy\tmatch\t/ {print $1,$4,$5}\' dmel*.gff | uniq > repeat-coord.dat')
-os.system('awk \'/FlyBase\tCDS\t/ {print $1,$4,$5}\' dmel*.gff | uniq > CDS-coord.dat')
-os.system('awk \'/FlyBase\tmRNA\t/ {\
-   if ($7 == "+"){\
-      print $1,$4\
-   } else {\
-      print $1,$5\
-   }\
-}\' dmel*.gff | uniq > TSS-coord.dat')
+os.system('awk \'/\tCDS\t/ {print $1,$4,$5}\' *.gtf | uniq > CDS-coord.dat')
+#os.system('awk \'/FlyBase\tmRNA\t/ {\
+#   if ($7 == "+"){\
+#      print $1,$4\
+#   } else {\
+#      print $1,$5\
+#   }\
+#}\' dmel*.gff | uniq > TSS-coord.dat')
    
 
 def processcoord(coords):
@@ -100,18 +93,12 @@ def processcoord(coords):
 fcds=open("CDS-coord.dat")
 cds=[i.rstrip().split(" ") for i in fcds.readlines()]
 processcoord(cds)
-cds
 fcds.close()
-
-## Open file containing repeated sequence coordinates
-frepeat=open("repeat-coord.dat")
-repeat=[i.rstrip().split(" ") for i in frepeat.readlines()]
-processcoord(repeat)
-frepeat.close()
 
 os.chdir("..")
 
-print("Relevant coordinates successfully imported.")
+print "[",datetime.datetime.now(),"]  Relevant coordinates successfully imported."
+print 
 
 ## Mask functions
 def maskseq(start,stop,seq,mode):
@@ -139,67 +126,34 @@ def posrecordleft(coordlist,coord):
 
 ## Iterate over alignment files
 os.chdir("alignments")
-fmap=open("map")
-maps=[i.rstrip().split("\t") for i in fmap.readlines()]
-fmap.close
 
-for i in maps:
-   coordmel=i[1:4]
-   if coordmel[1]!="NA" and coordmel[2]!='NA':
-      coordmel[0]=coordmel[0][3:]
-      coordmel[1]=int(coordmel[1])
-      coordmel[2]=int(coordmel[2])
-      r5coord=mapping.r4_map(coordmel)
-      if  r5coord != ["", 0, 0]:
-         os.chdir(i[0])
-         with open("mavid.mfa") as fmavid:
-            with open ("mavid2.mfa","w") as fmavid2:
-               firstline=fmavid.readline()
-               fmavid2.write(firstline.rstrip())
-               fmavid2.write(" "+r5coord[0]+" "+str(r5coord[1])+" "+str(r5coord[2])+"\n")
-               for line in fmavid.readlines():
-                  if line[0]=='>':
-                     fmavid2.write("\n"+line)
-                  else:
-                     fmavid2.write(line.rstrip())
-         shutil.move("mavid2.mfa","mavid.mfa")
-         os.chdir("..")
-      else:
-         shutil.rmtree(i[0])
-   else:
-      shutil.rmtree(i[0])
+print "[",datetime.datetime.now(),"]  Masking CDS..."
+print 
 
-
-
-for folder in glob.glob('[0-9]*/'):
+for folder in glob.glob('chr*/'):
    print "Processing folder ",folder
    os.chdir(folder)
-   with open('mavid.mfa') as fmavid:
-      with open('mavid2.mfa', 'w' ) as fmavid2:
+   for file in glob.glob('*.fa'):
+      with open(file) as fmavid:
+         with open('foo.fa', 'w' ) as fmavid2:
 
-         ## Read coordinates
-         coordline=fmavid.readline()
-         fmavid2.write(coordline)
-         coordline=coordline.rstrip().split(" ")
-         coordstart=[coordline[1],int(coordline[2]),int(coordline[2])]
-         coordstop=[coordline[1],int(coordline[3]),int(coordline[3])]
-         
-         ## Mask sequences
-         seqline=list(fmavid.readline())
-         posstart=posrecordleft(cds,coordstart)
-         posstop=posrecordleft(cds,coordstop)
-         for i in range(posstart,posstop):
-            record=cds[i]
-            if record[0]==coordstart[0]:
-               maskseq(record[1]-coordstart[1],record[2]-coordstart[1],seqline,0)
-         posstart=posrecordleft(repeat,coordstart)
-         posstop=posrecordleft(repeat,coordstop)
-         for i in range(posstart,posstop):
-            record=repeat[i]
-            if record[0]==coordstart[0]:
-               maskseq(record[1]-coordstart[1],record[2]-coordstart[1],seqline,1)
-         fmavid2.write(''.join(seqline))
-         for i in fmavid.readlines():
-            fmavid2.write(i)
-   shutil.move("mavid2.mfa","mavid.mfa")
+            ## Read coordinates
+            coordline=fmavid.readline()
+            fmavid2.write(coordline)
+            coordline=coordline.rstrip().split(" ")
+            coordstart=[coordline[1],int(coordline[2]),int(coordline[2])]
+            coordstop=[coordline[1],int(coordline[3]),int(coordline[3])]
+            
+            ## Mask mouse CDS
+            seqline=list(fmavid.readline())
+            posstart=posrecordleft(cds,coordstart)
+            posstop=posrecordleft(cds,coordstop)
+            for i in range(posstart,posstop):
+               record=cds[i]
+               if record[0]==coordstart[0]:
+                  maskseq(record[1]-coordstart[1],record[2]-coordstart[1],seqline,0)
+            fmavid2.write(''.join(seqline))
+            for i in fmavid.readlines():
+               fmavid2.write(i)
+      shutil.move("foo.fa",file)
    os.chdir("..")
