configure.ac modified to use imogene.cpp
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_PREREQ([2.61])
 #AC_INIT(Imogene, 1.0, [Hervé Rouault rouault@lps.ens.fr Marc Santolini marc.santolini@lps.ens.fr])
 AC_INIT(Imogene, m4_esyscmd([tools/git-version-gen .tarball-version]), [rouault@lps.ens.fr marc.santolini@lps.ens.fr])
 AM_INIT_AUTOMAKE()
-AC_CONFIG_SRCDIR([src/imogene-genmot.cpp])
+AC_CONFIG_SRCDIR([src/imogene.cpp])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 m4_include([m4/ax_blas.m4])
