Wrote sh scripts to generate align lists.
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	new file:   .DS_Store
	modified:   scripts/sh/Makefile.am
	modified:   scripts/sh/generate-cmdline-files.sh
	modified:   scripts/sh/generate-droso-alignlist.sh.in
	modified:   scripts/sh/generate-eutherian-alignlist.sh.in
	modified:   src/extract.cpp
	modified:   src/extract_cmdline.c

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    scripts/python/get-epo-align.sh

--- a/scripts/sh/generate-eutherian-alignlist.sh.in
+++ b/scripts/sh/generate-eutherian-alignlist.sh.in
@@ -1,8 +1,10 @@
 #!/bin/sh
 
-find $PWD -name "*.fa" > foo
+cd '@pkgdatadir@/eutherian'
 
-sed "s/.*chr//;s/\// /;s/-/ /;s/\.fa//" <foo > bar
-paste bar foo| tr " " "\t" > files.dat
-rm foo
-rm bar
+   for i in alignments/chr*/*.fa
+   do 
+      echo `awk 'NR==1' $i|cut -d ' ' -f 2-` $PWD/$i 
+   done > align.dat
+
+cd -
