Minor changes to getalign-eutherian. Corrected a bug: README.emf file was downloaded and converted to fasta Added "force" option to gunzip to avoid pausing script for y/n question
 On branch master
 Your branch is ahead of 'origin/master' by 2 commits.

 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

  modified:   getalign-eutherian.py.in

 Changes not staged for commit:
   (use "git add/rm <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    get-epo-align.sh

--- a/scripts/python/getalign-eutherian.py.in
+++ b/scripts/python/getalign-eutherian.py.in
@@ -27,12 +27,12 @@ print
 
 mkdir('alignments')
 os.chdir("alignments")
-os.system('wget -c -nd ftp://ftp.ensembl.org/pub/release-63/emf/ensembl-compara/epo_12_eutherian/*')
+os.system('wget -c -nd ftp://ftp.ensembl.org/pub/release-63/emf/ensembl-compara/epo_12_eutherian/Compara*')
 
 print "[",datetime.datetime.now(),"]  Extracting alignment files..."
 print
 
-os.system('gunzip -v *.gz')
+os.system('gunzip -fv *.gz')
 
 print "[",datetime.datetime.now(),"]  Converting EMF files to fasta..."
 print
@@ -65,7 +65,7 @@ os.system('wget -c "http://hgdownload.cse.ucsc.edu/goldenPath/mm9/database/refGe
 print "[",datetime.datetime.now(),"]  Extracting coordinate files..."
 print
 
-os.system('gunzip refGene.txt.gz')
+os.system('gunzip -vf refGene.txt.gz')
 
 print "[",datetime.datetime.now(),"]  Relevant coordinate extraction."
 print 
@@ -155,3 +155,6 @@ for folder in glob.glob('chr*/'):
    os.chdir("..")
 
 os.chdir('..')
+
+print "[",datetime.datetime.now(),"]  Exit normally."
+print 
